# AnimalGuesserGame

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  features.txt  resources.qrc
animals/: Alligator.txt  Bat.txt  Bear.txt  Black Panther.txt  Buffalo.txt  Bull.txt  Butterfly.txt  Camel.txt  Chacal.txt  Cheetah.txt  Clownfish.txt  Cobra.txt  Coyote.txt  Crab.txt  Deer.txt  Dingo.txt  Dolphin.txt  Donkey.txt  Dove.txt  Ell.txt  Ferret.txt  Flamingo.txt  Fox.txt  Frog.txt  Gecko.txt  Gorilla.txt  Hammster.txt  Hippopotamus.txt  Hummingbird.txt  Hyena.txt  Iguana.txt  Jaguar.txt  Jellyfish.txt  Kangaroo.txt  Killer Whale.txt  Komodo dragon.txt  Ladybug.txt  Leon.txt  Lizard.txt  Lobster.txt  (+62 more)
data/: animal_tree.json  animal_tree_copia.json
include/: answerHandler.h  gameLogic.h  globals.h  node.h  programLogic.h
src/: answerHandler.cpp  gameLogic.cpp  main.cpp  node.cpp  programLogic.cpp
src/cli/: main_cli.cpp
src/core/: gameLogic.cpp  globals.cpp  node.cpp  programLogic.cpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
